ajustes de controller generico

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoConnection": {
-    "ConnectionString": "mongodb://localhost:13832/webapimongo",
+    "ConnectionString": "mongodb://mongowebap1:mongowebap1@ds213832.mlab.com:13832/webapimongo",
     "Database": "webapimongo"
   },
   "Logging": {
